fix depute nobg alignement

--- a/main.scss
+++ b/main.scss
@@ -1523,6 +1523,7 @@ ul.ui-menu{
       border-radius: 50%;
       //box-shadow: $card-box-shadow;
       background: linear-gradient(#99BDDA, white);
+      text-align: center;
       img{
         width: 84%;
         height: auto;
